# 3DProcessing

./: .gitignore  .gitmodules  BMPLoader.h  Button.cpp  Button.h  CMakeLists.txt  GlfwTest.vcxproj  GlfwTest.vcxproj.filters  Main.cpp  Mouse.h  NeighbourList.h  PointPair.h  README.md  TransformationMatrix.h  TriMesh.cpp  TriMesh_curvature.cpp  TriMesh_spectral.cpp  Viewer.cpp  Viewer.h  dragon_lowres.ply  eigenshape.m  enums.h  glfw_test.cpp  main.cpp  mouse.h  neighbor_list.h  point_pair.h  trimesh.cpp  trimesh.h  trimesh_curvature.cpp  trimesh_spectral.cpp  viewer.cpp  viewer.h  viewer_ui.cpp  viewer_ui_components.h
lib/OpenMesh-6.0/Documentation/: a00002.html  a00004.html  a00006.html  a00008.html  a00012.html  a00018.html  a00020.html  a00022.html  a00024.html  a00026.html  a00030.html  a00034.html  a00036.html  a00038.html  a00040.html  a00042.html  a00044.html  a00046.html  a00048.html  a00050.html  a00052.html  a00054.html  a00056.html  a00058.html  a00060.html  a00062.html  a00064.html  a00066.html  a00070.html  a00071.html  a00072.html  a00073.html  a00074.html  a00075.html  a00076.html  a00077.html  a00078.html  a00079.html  a00080.html  a00081.html  (+988 more)
lib/OpenMesh-6.0/Documentation/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_15.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_2.js  files_a.js  files_d.js  functions_1.js  functions_11.js  (+12 more)
lib/glfw-3.1.2/: CMakeLists.txt
lib/spectra/include/: GenEigsSolver.h  SymEigsSolver.h
(+3 files in other folders)
